--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,6 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href='http://fonts.googleapis.com/css?family=Cutive+Mono' rel='stylesheet' type='text/css'>
 
       <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <link rel="stylesheet" href="styles/main.css">
@@ -18,20 +17,16 @@
     <!-- endbuild -->
   </head>
   <body>
-  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+  <nav class="navbar navbar-default navbar-fixed-top unieke-navigatie" role="navigation">
       <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="#">Uniekezaak</a>
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+          <a class="navbar-brand logo" href="/"><img src="images/logo.png" alt="Uniekezaak logo"></a>
+          <a class="navbar-brand logo logo-text" href="/">Uniekezaak</a>
       </div>
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-              <li class="active">
-                  <a href="#">All Producten</a>
-              </li>
-              <li>
-                  <a href="#">Wat is nieuw</a>
-              </li>
+      <div class="collapse navbar-collapse navbar-center" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav navbar-center-inner">
               <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Cadeau verpakkingen<strong class="caret"></strong></a>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Winkel<strong class="caret"></strong></a>
                   <ul class="dropdown-menu">
                       <li>
                           <a href="#">doosjes &amp; zakjes</a>
@@ -53,9 +48,6 @@
                           <a href="#">One more separated link</a>
                       </li>
                   </ul>
-              </li>
-              <li>
-                  <a href="#">DIY en Projecten</a>
               </li>
               <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Inspiratie<strong class="caret"></strong></a>
@@ -81,6 +73,9 @@
                       </li>
                   </ul>
               </li>
+              <li>
+                  <a href="#">Over ons</a>
+              </li>
           </ul>
           <form class="navbar-form navbar-right" role="search">
               <div class="form-group">
@@ -90,12 +85,6 @@
       </div>
   </nav>
 
-  <div class="row clearfix text-center">
-      <img alt="140x140" src="/images/logo.png" />
-      <h2 class="text-center">
-          h3. Lorem ipsum dolor sit amet.
-      </h2>
-  </div>
   <div class="row clearfix">
       <div class="col-md-12 column">
           <div class="carousel slide" id="carousel-958983">
@@ -109,7 +98,7 @@
               </ol>
               <div class="carousel-inner">
                   <div class="item active">
-                      <img alt="" src="http://lorempixel.com/1600/500/sports/1" />
+                      <img alt="" src="images/photos/colorfulldesk.jpg" />
                       <div class="carousel-caption">
                           <h4>
                               First Thumbnail label
@@ -120,7 +109,7 @@
                       </div>
                   </div>
                   <div class="item">
-                      <img alt="" src="http://lorempixel.com/1600/500/sports/2" />
+                      <img alt="" src="images/photos/skateboard.JPG" />
                       <div class="carousel-caption">
                           <h4>
                               Second Thumbnail label
@@ -145,33 +134,103 @@
           </div>
       </div>
   </div>
+
   <div class="container">
+      <div class="spacelarge"></div>
+          <h2 class="text-center">Nieuw binnen</h2>
 
-  <div class="row clearfix">
-      <div class="col-md-4 column">
-          <img alt="140x140" src="images/db_file_img_423_autox424.jpg" />
+          <div class="row">
+              <div class="col-md-4 column unieke-afbeelding">
+                  <img alt="140x140" src="images/db_file_img_423_autox424.jpg" />
+              </div>
+              <div class="col-md-4 column unieke-afbeelding">
+                  <img alt="140x140" src="images/db_file_img_427_autox424.jpg" />
+              </div>
+              <div class="col-md-4 column unieke-afbeelding">
+                  <img alt="140x140" src="images/db_file_img_431_autox424.jpg" />
+              </div>
+          </div>
+      <div class="text-center">
+        <a href="#" class="btn btn-default">Meer nieuwe producten ></a>
       </div>
-      <div class="col-md-4 column">
-          <img alt="140x140" src="images/db_file_img_427_autox424.jpg" />
-      </div>
-      <div class="col-md-4 column">
-          <img alt="140x140" src="images/db_file_img_431_autox424.jpg" />
-      </div>
-  </div>
 
-
+      <div class="spacelarge"></div>
+      <h2 class="text-center">"Romeo oh Romeo"</h2>
       <div class="row clearfix">
-          <div class="col-md-4 column">
-              <img alt="140x140" src="http://lorempixel.com/140/140/" />
+          <div class="col-md-4 column unieke-afbeelding">
+              <img alt="140x140" src="images/db_file_img_486_autox424.jpg" class="uniek-product-image" />
           </div>
-          <div class="col-md-4 column">
-              <img alt="140x140" src="http://lorempixel.com/140/140/" />
+          <div class="col-md-4 column unieke-afbeelding">
+              <img alt="140x140" src="images/db_file_img_487_autox424.jpg" class="uniek-product-image" />
           </div>
-          <div class="col-md-4 column">
-              <img alt="140x140" src="http://lorempixel.com/140/140/" />
+          <div class="col-md-4 column unieke-afbeelding">
+              <img alt="140x140" src="images/db_file_img_488_autox424.jpg" class="uniek-product-image" />
           </div>
+        </div>
+      <div class="text-center">
+          <a href="#" class="btn btn-default">Alles voor Julia ></a>
+      </div>
+          <div class="spacelarge"></div>
+          <h2 class="text-center">Onze producten</h2>
+      <div class="row clearfix">
+          <div class="col-md-2 column unieke-afbeelding">
+              <img alt="140x140" src="images/db_file_img_597_autox424.jpg" class="uniek-product-image" />
+              Stempelen (20)
+          </div>
+          <div class="col-md-2 column unieke-afbeelding">
+              <img alt="140x140" src="images/db_file_img_511_424x424.jpg" class="uniek-product-image" />
+              Inpakken (20)
+          </div>
+          <div class="col-md-2 column unieke-afbeelding">
+              <img alt="140x140" src="images/db_file_img_488_autox424.jpg" class="uniek-product-image" />
+              Kaarten (20)
+          </div>
+
+          <div class="col-md-2 column unieke-afbeelding">
+              <img alt="140x140" src="images/db_file_img_486_autox424.jpg" class="uniek-product-image" />
+              Voor buiten (20)
+          </div>
+          <div class="col-md-2 column unieke-afbeelding">
+              <img alt="140x140" src="images/db_file_img_487_autox424.jpg" class="uniek-product-image" />
+              Stempelen (20)
+          </div>
+          <div class="col-md-2 column unieke-afbeelding">
+              <img alt="140x140" src="images/db_file_img_488_autox424.jpg" class="uniek-product-image" />
+              Stempelen (20)
+          </div>
+
+      </div>
+      <div class="row clearfix">
+
+          <div class="col-md-2 column unieke-afbeelding">
+              <img alt="140x140" src="images/db_file_img_486_autox424.jpg" class="uniek-product-image" />
+              Voor buiten (20)
+          </div>
+          <div class="col-md-2 column unieke-afbeelding">
+              <img alt="140x140" src="images/db_file_img_487_autox424.jpg" class="uniek-product-image" />
+              Stempelen (20)
+          </div>
+          <div class="col-md-2 column unieke-afbeelding">
+              <img alt="140x140" src="images/db_file_img_427_autox424.jpg" class="uniek-product-image" />
+              Stempelen (20)
+          </div>
+          <div class="col-md-2 column unieke-afbeelding">
+              <img alt="140x140" src="images/db_file_img_597_autox424.jpg" class="uniek-product-image" />
+              Stempelen (20)
+          </div>
+          <div class="col-md-2 column unieke-afbeelding">
+              <img alt="140x140" src="images/db_file_img_511_424x424.jpg" class="uniek-product-image" />
+              Inpakken (20)
+          </div>
+          <div class="col-md-2 column unieke-afbeelding">
+              <img alt="140x140" src="images/db_file_img_488_autox424.jpg" class="uniek-product-image" />
+              Kaarten (20)
+          </div>
+
       </div>
 
+      <div class="spacelarge"></div>
+      <div class="spacelarge"></div>
 
 
   <div class="row clearfix">
