--- a/app/index.html
+++ b/app/index.html
@@ -18,70 +18,73 @@
   </head>
   <body>
   <nav class="navbar navbar-default navbar-fixed-top unieke-navigatie" role="navigation">
-      <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-          <a class="navbar-brand logo" href="/"><img src="images/logo.png" alt="Uniekezaak logo"></a>
-          <a class="navbar-brand logo logo-text" href="/">Uniekezaak</a>
-      </div>
-      <div class="collapse navbar-collapse navbar-center" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav navbar-center-inner">
-              <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Winkel<strong class="caret"></strong></a>
-                  <ul class="dropdown-menu">
-                      <li>
-                          <a href="#">doosjes &amp; zakjes</a>
-                      </li>
-                      <li>
-                          <a href="#">Labels &amp; kaarten</a>
-                      </li>
-                      <li>
-                          <a href="#">Stempelen</a>
-                      </li>
-                      <li class="divider">
-                      </li>
-                      <li>
-                          <a href="#">Separated link</a>
-                      </li>
-                      <li class="divider">
-                      </li>
-                      <li>
-                          <a href="#">One more separated link</a>
-                      </li>
-                  </ul>
-              </li>
-              <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Inspiratie<strong class="caret"></strong></a>
-                  <ul class="dropdown-menu">
-                      <li>
-                          <a href="#">Trouwen</a>
-                      </li>
-                      <li>
-                          <a href="#">Valentijn</a>
-                      </li>
-                      <li>
-                          <a href="#">Pasen</a>
-                      </li>
-                      <li class="divider">
-                      </li>
-                      <li>
-                          <a href="#">Separated link</a>
-                      </li>
-                      <li class="divider">
-                      </li>
-                      <li>
-                          <a href="#">One more separated link</a>
-                      </li>
-                  </ul>
-              </li>
-              <li>
-                  <a href="#">Over ons</a>
-              </li>
-          </ul>
-          <form class="navbar-form navbar-right" role="search">
-              <div class="form-group">
-                  <input type="text" class="form-control input-sm" />
-              </div> <button type="submit" class="btn btn-default btn-sm">Zoeken</button>
-          </form>
+      <div class="container">
+
+          <div class="navbar-header">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+              <a class="navbar-brand logo" href="/"><img src="images/logo.png" alt="Uniekezaak logo"></a>
+              <a class="navbar-brand logo logo-text" href="/">Uniekezaak</a>
+          </div>
+          <div class="collapse navbar-collapse navbar-center" id="bs-example-navbar-collapse-1">
+              <ul class="nav navbar-nav navbar-center-inner">
+                  <li class="dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown">Winkel<strong class="caret"></strong></a>
+                      <ul class="dropdown-menu">
+                          <li>
+                              <a href="#">doosjes &amp; zakjes</a>
+                          </li>
+                          <li>
+                              <a href="#">Labels &amp; kaarten</a>
+                          </li>
+                          <li>
+                              <a href="#">Stempelen</a>
+                          </li>
+                          <li class="divider">
+                          </li>
+                          <li>
+                              <a href="#">Separated link</a>
+                          </li>
+                          <li class="divider">
+                          </li>
+                          <li>
+                              <a href="#">One more separated link</a>
+                          </li>
+                      </ul>
+                  </li>
+                  <li class="dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown">Inspiratie<strong class="caret"></strong></a>
+                      <ul class="dropdown-menu">
+                          <li>
+                              <a href="#">Trouwen</a>
+                          </li>
+                          <li>
+                              <a href="#">Valentijn</a>
+                          </li>
+                          <li>
+                              <a href="#">Pasen</a>
+                          </li>
+                          <li class="divider">
+                          </li>
+                          <li>
+                              <a href="#">Separated link</a>
+                          </li>
+                          <li class="divider">
+                          </li>
+                          <li>
+                              <a href="#">One more separated link</a>
+                          </li>
+                      </ul>
+                  </li>
+                  <li>
+                      <a href="#">Over ons</a>
+                  </li>
+              </ul>
+              <form class="navbar-form navbar-right" role="search">
+                  <div class="form-group">
+                      <input type="text" class="form-control input-sm" />
+                  </div> <button type="submit" class="btn btn-default btn-sm">Zoeken</button>
+              </form>
+          </div>
       </div>
   </nav>
 
