--- a/app/index.html
+++ b/app/index.html
@@ -17,18 +17,17 @@
   </head>
   <body>
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+      <div class="unieke-pagina-opleuk"></div>
       <div class="container">
-
-
           <div class="row clearfix">
-              <div class="col-md-3 column">
+              <div class="col-md-3">
                   <div class="navbar-header">
                       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
                       <a class="navbar-brand logo" href="/"><img src="images/logo.png" alt="Uniekezaak logo"></a>
                       <a class="navbar-brand logo logo-text" href="/">Uniekezaak</a>
                   </div>
               </div>
-              <div class="col-md-9 column">
+              <div class="col-md-9">
                   <div class="collapse navbar-collapse navbar-center" id="bs-example-navbar-collapse-1">
                   <ul class="nav navbar-nav navbar-center-inner">
                       <li class="dropdown">
@@ -95,10 +94,9 @@
 
   <div class="container">
       <div class="row clearfix">
-          <div class="col-md-3 column">
+          <div class="col-md-3">
               <div class="bs-sidebar hidden-print" role="complementary">
                   <ul class="nav bs-sidenav">
-                      <li><a href="#one">Dingen</a></li>
                       <li class="active"><a href="#two">Stempelen</a>
                           <ul class="nav">
                               <li><a href="#one">Enkele Stempels <span class="badge">12</span></a></li>
@@ -106,42 +104,38 @@
                               <li><a href="#three">Stempelkussens <span class="badge">5</span></a></li>
                           </ul>
                       </li>
-                      <li><a href="#three">Dongen</a></li>
-                      <li><a href="#one">One</a></li>
+                      <li><a href="#three">Whasi Tape</a></li>
+                      <li><a href="#one">Voor Buiten</a></li>
                       <li><a href="#two">Two</a></li>
                       <li><a href="#three">Three</a></li>
-                      <li><a href="#one">One</a></li>
-                      <li><a href="#two">Two</a></li>
-                      <li><a href="#three">Three</a></li>
-                      <li><a href="#one">One</a></li>
                   </ul>
               </div>
           </div>
-          <div class="col-md-9 column">
+          <div class="col-md-9">
               <div class="space"></div>
 
               <h2 class="text-center">Onze producten</h2>
               <div class="row clearfix">
-                  <div class="col-md-3 unieke-afbeelding">
+                  <div class="col-md-3">
                       <a href="#" class="thumbnail">
                       <img alt="140x140" src="images/db_file_img_597_autox424.jpg"  />
                       Stempelen (20)
                       </a>
                   </div>
-                  <div class="col-md-3 unieke-afbeelding">
+                  <div class="col-md-3">
                       <a href="#" class="thumbnail">
                       <img alt="140x140" src="images/db_file_img_511_424x424.jpg"  />
                       Inpakken (20)
                       </a>
                   </div>
-                  <div class="col-md-3 unieke-afbeelding">
+                  <div class="col-md-3">
                       <a href="#" class="thumbnail">
                       <img alt="140x140" src="images/db_file_img_488_autox424.jpg"  />
                       Kaarten (20)
                       </a>
                   </div>
 
-                  <div class="col-md-3 unieke-afbeelding">
+                  <div class="col-md-3">
                       <a href="#" class="thumbnail">
                       <img alt="140x140" src="images/db_file_img_486_autox424.jpg"  />
                       Voor buiten (20)
@@ -149,25 +143,25 @@
                   </div>
               </div>
               <div class="row clearfix">
-                  <div class="col-md-3 unieke-afbeelding">
+                  <div class="col-md-3">
                       <a href="#" class="thumbnail">
                       <img alt="140x140" src="images/db_file_img_427_autox424.jpg"  />
                       Stempelen (20)
                       </a>
                   </div>
-                  <div class="col-md-3 unieke-afbeelding">
+                  <div class="col-md-3">
                       <a href="#" class="thumbnail">
                       <img alt="140x140" src="images/db_file_img_597_autox424.jpg"  />
                       Stempelen (20)
                       </a>
                   </div>
-                  <div class="col-md-3 unieke-afbeelding">
+                  <div class="col-md-3">
                       <a href="#" class="thumbnail">
                       <img alt="140x140" src="images/db_file_img_511_424x424.jpg"  />
                       Inpakken (20)
                       </a>
                   </div>
-                  <div class="col-md-3 unieke-afbeelding">
+                  <div class="col-md-3">
                       <a href="#" class="thumbnail">
                       <img alt="140x140" src="images/db_file_img_488_autox424.jpg"  />
                       Kaarten (20)
@@ -177,14 +171,20 @@
 
               <h2 class="text-center">Nieuw binnen</h2>
               <div class="row">
-                  <div class="col-md-4 unieke-afbeelding">
-                      <img alt="140x140" src="images/db_file_img_423_autox424.jpg" />
+                  <div class="col-md-4">
+                      <a href="#" class="thumbnail">
+                        <img alt="140x140" src="images/db_file_img_423_autox424.jpg" />
+                      </a>
                   </div>
-                  <div class="col-md-4 unieke-afbeelding">
-                      <img alt="140x140" src="images/db_file_img_427_autox424.jpg" />
+                  <div class="col-md-4">
+                      <a href="#" class="thumbnail">
+                          <img alt="140x140" src="images/db_file_img_427_autox424.jpg" />
+                      </a>
                   </div>
-                  <div class="col-md-4 unieke-afbeelding">
-                      <img alt="140x140" src="images/db_file_img_431_autox424.jpg" />
+                  <div class="col-md-4">
+                      <a href="#" class="thumbnail">
+                          <img alt="140x140" src="images/db_file_img_431_autox424.jpg" />
+                      </a>
                   </div>
               </div>
               <div class="text-center">
@@ -193,14 +193,20 @@
               <div class="spacelarge"></div>
               <h2 class="text-center">"Romeo oh Romeo"</h2>
               <div class="row clearfix">
-                  <div class="col-md-4 unieke-afbeelding">
-                      <img alt="140x140" src="images/db_file_img_486_autox424.jpg"  />
+                  <div class="col-md-4">
+                      <a href="#" class="thumbnail">
+                        <img alt="140x140" src="images/db_file_img_486_autox424.jpg"  />
+                      </a>
                   </div>
-                  <div class="col-md-4 unieke-afbeelding">
-                      <img alt="140x140" src="images/db_file_img_487_autox424.jpg"  />
+                  <div class="col-md-4">
+                      <a href="#" class="thumbnail">
+                          <img alt="140x140" src="images/db_file_img_487_autox424.jpg"  />
+                      </a>
                   </div>
-                  <div class="col-md-4 unieke-afbeelding">
-                      <img alt="140x140" src="images/db_file_img_488_autox424.jpg"  />
+                  <div class="col-md-4">
+                      <a href="#" class="thumbnail">
+                        <img alt="140x140" src="images/db_file_img_488_autox424.jpg"  />
+                      </a>
                   </div>
                 </div>
               <div class="text-center">
@@ -212,83 +218,104 @@
 
       <div class="spacelarge"></div>
       <div class="spacelarge"></div>
-
-<div class="unieke-voeter">
-
-    <div class="row clearfix">
-        <div class="col-md-2 column">
+</div>
+<div class="unieke-voeter unieke-voordelen">
+    <div class="container">
+    <div class="row clearfix unieke-voordelen">
+        <div class="space"></div>
+        <div class="col-md-2">
             <h4><i class="fa fa-truck"></i> Gratis bezorging</h4>
             <p>Bij bestellingen van &euro; 75,- of meer</p>
         </div>
-        <div class="col-md-2 column">
+        <div class="col-md-2">
             <h4><i class="fa fa-gift"></i> Cadeau Service</h4>
             <p>Ingepakt voor maar &euro; 1,50 extra.</p>
         </div>
-        <div class="col-md-2 column">
+        <div class="col-md-2">
             <h4><i class="fa fa-clock-o"></i> Lekker Snel</h4>
             <p>Binnen 2-3 werkdagen in huis</p>
         </div>
-        <div class="col-md-2 column">
+        <div class="col-md-2">
             <h4><i class="fa fa-credit-card"></i> Veilig betalen</h4>
-            <p>Overschrijving via iDeal</p>
+            <p>Overschrijving via iDeal of Paypal</p>
         </div>
-        <div class="col-md-2 column">
+        <div class="col-md-2">
             <h4><i class="fa fa-credit-card"></i> Gratis retourneren</h4>
-            <p>30 dagen zicht&shy;termijn en gratis retour</p>
+            <p>30dagen zicht&shy;termijn &amp; gratis retour</p>
         </div>
-        <div class="col-md-2 column">
+        <div class="col-md-2">
             <h4><i class="fa fa-phone"></i> Direct Contact</h4>
-            <p>+31 (0)6 44186197<br/> info@uniekezaak.nl</p>
+            <p>+31 (0)6 44186197<br/> <a href="mailto:info@uniekezaak.nl">info@uniekezaak.nl</a></p>
         </div>
     </div>
     <div class="space"></div>
-    <div class="row clearfix">
-        <div class="col-md-3 column">
-            <h4>Over ons</h4>
-            <ul class="nav">
-                <li><a href="">Wie wij zijn</a></li>
-                <li><a href="">Contact</a></li>
-                <li><a href="">Voorwaarden</a></li>
-                <li><a href="">FAQ</a></li>
-            </ul>
+</div>
+<div class="unieke-links clearfix">
+
+    <div class="space"></div>
+    <div class="container">
+        <div class="row clearfix">
+            <div class="col-md-3">
+                <h4>Over ons</h4>
+                <ul class="nav">
+                    <li><a href="">Wie wij zijn</a></li>
+                    <li><a href="">Contact</a></li>
+                    <li><a href="">Voorwaarden</a></li>
+                    <li><a href="">FAQ</a></li>
+                </ul>
+            </div>
+            <div class="col-md-3">
+                <h4>Bestellen</h4>
+                <ul class="nav">
+                    <li><a href="">Verzendkosten</a></li>
+                    <li><a href="">Veilig betalen</a></li>
+                    <li><a href="">Retourneren</a></li>
+                    <li><a href="">Levertijd</a></li>
+                </ul>
+            </div>
+            <div class="col-md-3">
+                <h4>Volg ons</h4>
+                <ul class="nav">
+                    <li><a href=""><i class="fa fa-pinterest-square fa-2x"></i> Pinterest</a></li>
+                    <li><a href=""><i class="fa fa-facebook-square fa-2x"></i> Facebook</a></li>
+                    <li><a href=""><i class="fa fa-twitter-square fa-2x"></i> Twitter</a></li>
+                    <li><a href=""><i class="fa fa-linkedin-square fa-2x"></i> LinkedIn</a></li>
+                </ul>
+            </div>
+            <div class="col-md-3">
+                <h4>Aanmelden nieuwsbrief</h4>
+                <form role="form">
+                    <div class="form-group">
+                        <label for="exampleInputName" class="sr-only">Naam</label>
+                        <input type="name" class="form-control" placeholder="Naam" id="exampleInputName" />
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputEmail1" class="sr-only">E-mail</label>
+                        <input type="email" class="form-control" placeholder="E-mail" id="exampleInputEmail1" />
+                    </div>
+                    <button type="submit" class="btn btn-default">Aanmelden</button>
+                </form>
+            </div>
         </div>
-        <div class="col-md-3 column">
-            <h4>Bestellen</h4>
-            <ul class="nav">
-                <li><a href="">Verzendkosten</a></li>
-                <li><a href="">Veilig betalen</a></li>
-                <li><a href="">Retourneren</a></li>
-                <li><a href="">Levertijd</a></li>
-            </ul>
-        </div>
-        <div class="col-md-3 column">
-            <h4>Uitgelichte producten</h4>
-            <ul class="nav">
-                <li><a href="">Stempels</a></li>
-                <li><a href="">Contact</a></li>
-                <li><a href="">Voorwaarden</a></li>
-                <li><a href="">FAQ</a></li>
-            </ul>
-        </div>
-        <div class="col-md-3 column">
-            <h4>Aanmelden nieuwsbrief</h4>
-            <form role="form">
-                <div class="form-group">
-                    <label for="exampleInputName" class="sr-only">Naam</label>
-                    <input type="name" class="form-control" placeholder="Naam" id="exampleInputName" />
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputEmail1" class="sr-only">E-mail</label>
-                    <input type="email" class="form-control" placeholder="E-mail" id="exampleInputEmail1" />
-                </div>
-                <button type="submit" class="btn btn-default">Aanmelden</button>
-            </form>
-        </div>
+        <div class="space"></div>
     </div>
 </div>
-
-  </div>
-
+    </div>
+    <div class="uniek-pagina-einde">
+        <div class="container">
+            <div class="row clearfix">
+                <div class="col-md-6">
+                    &copy; Uniekezaak vof. Alle rechten voorbehouden.
+                </div>
+                <div class="col-md-6 text-right">
+                    <img src="images/icon-payment-banktransfer.png">
+                    <img src="images/icon-payment-ideal.png">
+                    <img src="images/icon-payment-paypal.png">
+                </div>
+            </div>
+        </div>
+    </div>
+ </div>
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
