--- a/app/index.html
+++ b/app/index.html
@@ -82,11 +82,14 @@
                           <a href="#">Over ons</a>
                       </li>
                   </ul>
-                  <form class="navbar-form navbar-right" role="search">
-                      <div class="form-group">
-                          <input type="text" class="form-control input-sm" />
-                      </div> <button type="submit" class="btn btn-default btn-sm">Zoeken</button>
-                  </form>
+                  <div class="navbar-right col-lg-5">
+                      <h3><i class="unieke-icon unieke-icon-3x unieke-icon-basket navbar-left"><span class="badge badge-primary pull-right">3</span></i></h3>
+                      <form class="navbar-form navbar-right" role="search">
+                          <div class="form-group">
+                              <input type="text" class="form-control input-sm" />
+                          </div> <button type="submit" class="btn btn-default btn-sm">Zoeken</button>
+                      </form>
+                  </div>
               </div>
            </div>
       </div>
@@ -99,9 +102,9 @@
                   <ul class="nav bs-sidenav">
                       <li class="active"><a href="#two">Stempelen</a>
                           <ul class="nav">
-                              <li><a href="#one">Enkele Stempels <span class="badge">12</span></a></li>
-                              <li><a href="#two">Stempelsets <span class="badge">3</span></a></li>
-                              <li><a href="#three">Stempelkussens <span class="badge">5</span></a></li>
+                              <li><a href="#one">Enkele Stempels <span class="badge pull-right">12</span></a></li>
+                              <li><a href="#two">Stempelsets <span class="badge pull-right">3</span></a></li>
+                              <li><a href="#three">Stempelkussens <span class="badge pull-right">5</span></a></li>
                           </ul>
                       </li>
                       <li><a href="#three">Whasi Tape</a></li>
@@ -191,26 +194,27 @@
                 <a href="#" class="btn btn-default">Meer nieuwe producten ></a>
               </div>
               <div class="spacelarge"></div>
-              <h2 class="text-center">"Romeo oh Romeo"</h2>
+              <h2 class="text-center">Laat die lente maar komen..</h2>
+              <p class="text-center lead text-secundairy">Kaarten met bloemzaadjes of confetti met zaadjes, hoe leuk!</p>
               <div class="row clearfix">
-                  <div class="col-md-4">
+                  <div class="col-md-4">a
                       <a href="#" class="thumbnail">
-                        <img alt="140x140" src="images/db_file_img_486_autox424.jpg"  />
+                        <img alt="140x140" src="images/products/sla.jpg"  />
                       </a>
                   </div>
                   <div class="col-md-4">
                       <a href="#" class="thumbnail">
-                          <img alt="140x140" src="images/db_file_img_487_autox424.jpg"  />
+                          <img alt="140x140" src="images/products/tuinconfetti.jpg"  />
                       </a>
                   </div>
                   <div class="col-md-4">
                       <a href="#" class="thumbnail">
-                        <img alt="140x140" src="images/db_file_img_488_autox424.jpg"  />
+                        <img alt="140x140" src="images/products/veldbloem.jpg"  />
                       </a>
                   </div>
                 </div>
               <div class="text-center">
-                  <a href="#" class="btn btn-default">Alles voor Julia ></a>
+                  <a href="#" class="btn btn-default">Proef de lente <i class="fa fa-arrow-circle-right"></i></a>
               </div>
           </div>
       </div>
@@ -224,27 +228,27 @@
     <div class="row clearfix unieke-voordelen">
         <div class="space"></div>
         <div class="col-md-2">
-            <h4><i class="fa fa-truck"></i> Gratis bezorging</h4>
+            <h4><i class="unieke-icon unieke-icon-3x unieke-icon-truck"></i> Gratis bezorging</h4>
             <p>Bij bestellingen van &euro; 75,- of meer</p>
         </div>
         <div class="col-md-2">
-            <h4><i class="fa fa-gift"></i> Cadeau Service</h4>
+            <h4><i class="unieke-icon unieke-icon-3x unieke-icon-gift"></i> Cadeau Service</h4>
             <p>Ingepakt voor maar &euro; 1,50 extra.</p>
         </div>
         <div class="col-md-2">
-            <h4><i class="fa fa-clock-o"></i> Lekker Snel</h4>
+            <h4><i class="unieke-icon unieke-icon-3x unieke-icon-clock"></i> Lekker Snel</h4>
             <p>Binnen 2-3 werkdagen in huis</p>
         </div>
         <div class="col-md-2">
-            <h4><i class="fa fa-credit-card"></i> Veilig betalen</h4>
+            <h4><i class="unieke-icon unieke-icon-3x unieke-icon-pay"></i> Veilig betalen</h4>
             <p>Overschrijving via iDeal of Paypal</p>
         </div>
         <div class="col-md-2">
-            <h4><i class="fa fa-credit-card"></i> Gratis retourneren</h4>
+            <h4><i class="unieke-icon unieke-icon-3x unieke-icon-retour"></i> Gratis retourneren</h4>
             <p>30dagen zicht&shy;termijn &amp; gratis retour</p>
         </div>
         <div class="col-md-2">
-            <h4><i class="fa fa-phone"></i> Direct Contact</h4>
+            <h4><i class="unieke-icon unieke-icon-3x unieke-icon-phone"></i> Direct Contact</h4>
             <p>+31 (0)6 44186197<br/> <a href="mailto:info@uniekezaak.nl">info@uniekezaak.nl</a></p>
         </div>
     </div>
@@ -255,7 +259,7 @@
     <div class="space"></div>
     <div class="container">
         <div class="row clearfix">
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <h4>Over ons</h4>
                 <ul class="nav">
                     <li><a href="">Wie wij zijn</a></li>
@@ -264,7 +268,7 @@
                     <li><a href="">FAQ</a></li>
                 </ul>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <h4>Bestellen</h4>
                 <ul class="nav">
                     <li><a href="">Verzendkosten</a></li>
@@ -273,16 +277,7 @@
                     <li><a href="">Levertijd</a></li>
                 </ul>
             </div>
-            <div class="col-md-3">
-                <h4>Volg ons</h4>
-                <ul class="nav">
-                    <li><a href=""><i class="fa fa-pinterest-square fa-2x"></i> Pinterest</a></li>
-                    <li><a href=""><i class="fa fa-facebook-square fa-2x"></i> Facebook</a></li>
-                    <li><a href=""><i class="fa fa-twitter-square fa-2x"></i> Twitter</a></li>
-                    <li><a href=""><i class="fa fa-linkedin-square fa-2x"></i> LinkedIn</a></li>
-                </ul>
-            </div>
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <h4>Aanmelden nieuwsbrief</h4>
                 <form role="form">
                     <div class="form-group">
@@ -297,6 +292,19 @@
                 </form>
             </div>
         </div>
+        <div class="row clearfix">
+            <div class="col-md-12">
+                <h4>Volg ons :</h4>
+                <ul class="nav nav-tabs">
+                    <li><a href=""><h3><i class="unieke-icon unieke-icon-2x unieke-icon-pinterest"></i>&nbsp;&nbsp;Pinterest</h3></a></li>
+                    <li><a href=""><h3><i class="unieke-icon unieke-icon-2x unieke-icon-facebook"></i>&nbsp;&nbsp;Facebook</h3></a></li>
+                    <li><a href=""><h3><i class="unieke-icon unieke-icon-2x unieke-icon-twitter"></i>&nbsp;&nbsp;Twitter</h3></a></li>
+                    <li><a href=""><h3><i class="unieke-icon unieke-icon-2x unieke-icon-etsy"></i>&nbsp;&nbsp;Etsy</h3></a></li>
+                </ul>
+            </div>
+        </div>
+
+
         <div class="space"></div>
     </div>
 </div>
